# tomato-novel-manager

./: README.md  index.html  package.json  pnpm-lock.yaml  wrangler.toml
.github/workflows/: deploy-website.yml  release.yml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  commands.rs  downloader.rs  lib.rs  main.rs  types.rs
src/components/: BookDetail.css  BookDetail.tsx  SearchView.css  SearchView.tsx
src/lib/: api.ts
website/: index.html  package-lock.json
website/src/: App.css  App.tsx
